# Winshark

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
dissector/: 0winshark.lua  CMakeLists.txt  Microsoft_Windows_NDIS_PacketCapture.lua  Microsoft_Windows_PktMon.lua  Tracelogging.lua  etw.lua
install/: patch.xml
transluator/: CMakeLists.txt
transluator/scripts/: WinsharkUpdate.bat
transluator/src/: DissectorLua.cs  DissectorPython.cs  Manifest.cs  Transluator.cs
