install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/0winshark.lua" DESTINATION plugins/winshark)
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/Tracelogging.lua" DESTINATION plugins/winshark)
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/Microsoft_Windows_NDIS_PacketCapture.lua" DESTINATION plugins/winshark)
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/Microsoft_Windows_PktMon.lua" DESTINATION plugins/winshark)
